--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+      - ./mysql-init/:/docker-entrypoint-initdb.d/
+
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
