--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,2 @@
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ pages/index.php [QSA,L]
-  </IfModule>
-  
+RewriteEngine On
+RewriteRule ^$ /pages/index.php [L]
